SUBDIRS = quicktime

noinst_HEADERS = \
cmodel_default.h \
cmodel_permutation.h \
cmodel_yuv420p.h \
cmodel_yuv422.h \
codecs.h \
ctab.h \
dinf.h \
edts.h \
elst.h \
fastjpg.h \
fastjpgmacro.h \
funcprotos.h \
graphics.h \
hdlr.h \
lqt_codecinfo_private.h \
lqt_funcprotos.h \
lqt_private.h \
matrix.h \
mdhd.h \
mdia.h \
mmx.h \
mvhd.h \
rtjpeg.h \
rtjpeg_core.h \
smhd.h \
stbl.h \
stco.h \
stsc.h \
stsd.h \
stsdtable.h \
stss.h \
stsz.h \
stts.h \
tkhd.h \
udta.h \
util.h \
vmhd.h \
workarounds.h
