SUBDIRS = quicktime

noinst_HEADERS = \
cmodel_default.h \
cmodel_permutation.h \
cmodel_yuv420p.h \
cmodel_yuv422.h \
codecs.h \
colormodels.h \
fastjpg.h \
fastjpgmacro.h \
funcprotos.h \
graphics.h \
jpeg_old.h \
lqt_codecfile.h \
lqt_codecinfo.h \
lqt_codecinfo_private.h \
lqt_codecs.h \
lqt_fseek.h \
lqt_funcprotos.h \
lqt_loader.h \
lqt_plugin.h \
lqt_private.h \
lqt_quicktime.h \
mmx.h \
plugin.h \
quicktime.h \
rtjpeg.h \
rtjpeg_core.h \
util.h \
workarounds.h
