SUBDIRS = quicktime

noinst_HEADERS = \
cmodel_permutation.h \
codecs.h \
colormodels.h \
funcprotos.h \
graphics.h \
lqt_codecfile.h \
lqt_codecinfo.h \
lqt_codecinfo_private.h \
lqt_codecs.h \
lqt_fseek.h \
lqt_funcprotos.h \
lqt_loader.h \
lqt_plugin.h \
lqt_private.h \
mmx.h \
plugin.h \
workarounds.h
