noinst_PROGRAMS=test_codec testqt dump qtrecover

bin_PROGRAMS=qtinfo qtstreamize qtdechunk qtrechunk qtyuv4toyuv

testqt_SOURCES=testqt.c
testqt_LDADD=@UTIL_LIBADD@

test_codec_SOURCES=test_codec.c
test_codec_LDADD=@UTIL_LIBADD@

qtinfo_SOURCES=qtinfo.c
qtinfo_LDADD=@UTIL_LIBADD@

qtstreamize_SOURCES=qtstreamize.c
qtstreamize_LDADD=@UTIL_LIBADD@

dump_SOURCES=dump.c
dump_LDADD=@UTIL_LIBADD@

qtdechunk_SOURCES=dechunk.c
qtdechunk_LDADD=@UTIL_LIBADD@

qtrechunk_SOURCES=rechunk.c
qtrechunk_LDADD=@UTIL_LIBADD@

qtrecover_SOURCES=recover.c
qtrecover_LDADD=@UTIL_LIBADD@

qtyuv4toyuv_SOURCES=yuv4toyuv.c
qtyuv4toyuv_LDADD=@UTIL_LIBADD@


INCLUDES = -I../include

#CFLAGS += -g3 -Werror
